--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -71,6 +71,7 @@
         android:layout_marginRight="126dp"
         android:layout_marginBottom="16dp"
         android:text="@string/logIn"
+        android:textColor="@color/white"
         app:backgroundTint="@color/dark1"
         app:layout_constraintBottom_toTopOf="@+id/btnGuest"
         app:layout_constraintEnd_toEndOf="parent"
@@ -87,6 +88,7 @@
         android:layout_marginEnd="102dp"
         android:layout_marginRight="102dp"
         android:text="@string/guest"
+        android:textColor="@color/white"
         app:backgroundTint="@color/dark1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -120,6 +122,7 @@
         android:layout_marginRight="154dp"
         android:layout_marginBottom="148dp"
         android:text="@string/register"
+        android:textColor="@color/white"
         app:backgroundTint="@color/dark1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
