--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -89,6 +89,7 @@
         android:layout_height="58dp"
         android:layout_marginTop="24dp"
         android:text="@string/register"
+        android:textColor="@color/white"
         app:backgroundTint="@color/dark1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -101,6 +102,7 @@
         android:layout_height="46dp"
         android:layout_marginTop="48dp"
         android:text="@string/back"
+        android:textColor="@color/white"
         app:backgroundTint="@color/dark1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
