--- a/app/src/main/res/layout/activity_reset_pass.xml
+++ b/app/src/main/res/layout/activity_reset_pass.xml
@@ -44,6 +44,7 @@
         android:layout_height="58dp"
         android:layout_marginTop="40dp"
         android:text="@string/ResetPassword"
+        android:textColor="@color/white"
         app:backgroundTint="@color/dark1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -60,6 +61,7 @@
         android:layout_marginEnd="140dp"
         android:layout_marginRight="140dp"
         android:text="@string/back"
+        android:textColor="@color/white"
         app:backgroundTint="@color/dark1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
