Minor UI fixes making texts black

--- a/app/src/main/res/layout/content_scrolling_inspect.xml
+++ b/app/src/main/res/layout/content_scrolling_inspect.xml
@@ -20,6 +20,7 @@
             android:layout_marginTop="20dp"
             android:fontFamily="sans-serif-thin"
             android:text="@string/specifications"
+            android:textColor="@color/black"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -29,10 +30,11 @@
             android:id="@+id/btnBackInspectScroll"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="1100dp"
+            android:layout_marginTop="1036dp"
             android:text="@string/back"
             app:backgroundTint="@color/lightBlue"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -43,6 +45,7 @@
             android:layout_marginTop="8dp"
             android:gravity="center"
             android:text="@string/name"
+            android:textColor="@color/black"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -56,8 +59,9 @@
             android:gravity="center"
             android:text="@string/brand"
             android:textSize="18sp"
+            android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintHorizontal_bias="0.502"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtVSpecifications" />
 
@@ -65,10 +69,11 @@
             android:id="@+id/txtVProductCpu"
             android:layout_width="238dp"
             android:layout_height="99dp"
-            android:layout_marginTop="256dp"
+            android:layout_marginTop="248dp"
             android:gravity="center"
             android:text="@string/cpu"
             android:textSize="18sp"
+            android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
@@ -78,12 +83,13 @@
             android:id="@+id/txtVProductRam"
             android:layout_width="238dp"
             android:layout_height="99dp"
-            android:layout_marginTop="388dp"
+            android:layout_marginTop="372dp"
             android:gravity="center"
             android:text="@string/ram"
             android:textSize="18sp"
+            android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.502"
+            app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtVSpecifications" />
 
@@ -91,10 +97,11 @@
             android:id="@+id/txtVProductHdd"
             android:layout_width="238dp"
             android:layout_height="99dp"
-            android:layout_marginTop="516dp"
+            android:layout_marginTop="496dp"
             android:gravity="center"
             android:text="@string/HDD"
             android:textSize="18sp"
+            android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
@@ -104,10 +111,11 @@
             android:id="@+id/txtVProductSsd"
             android:layout_width="238dp"
             android:layout_height="99dp"
-            android:layout_marginTop="644dp"
+            android:layout_marginTop="624dp"
             android:gravity="center"
             android:text="@string/SSD"
             android:textSize="18sp"
+            android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
@@ -117,10 +125,11 @@
             android:id="@+id/txtVProductGraphics"
             android:layout_width="238dp"
             android:layout_height="99dp"
-            android:layout_marginTop="780dp"
+            android:layout_marginTop="740dp"
             android:gravity="center"
             android:text="@string/graphics"
             android:textSize="18sp"
+            android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.502"
             app:layout_constraintStart_toStartOf="parent"
@@ -130,10 +139,11 @@
             android:id="@+id/txtVProductOs"
             android:layout_width="238dp"
             android:layout_height="99dp"
-            android:layout_marginTop="920dp"
+            android:layout_marginTop="860dp"
             android:gravity="center"
             android:text="@string/os"
             android:textSize="18sp"
+            android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.502"
             app:layout_constraintStart_toStartOf="parent"
