--- a/app/src/main/res/layout/activity_inspect_scroll.xml
+++ b/app/src/main/res/layout/activity_inspect_scroll.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".inspectScrollActivity">
+    tools:context=".InspectScrollPopUpActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar"
@@ -33,7 +33,7 @@
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include layout="@layout/content_scrolling_inspect" />
+    <include layout="@layout/inspect_scroll_pop_up" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
