--- a/app/src/main/res/layout/inspect_scroll_pop_up.xml
+++ b/app/src/main/res/layout/inspect_scroll_pop_up.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/coupdegrace"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".inspectScrollActivity"
+    tools:context=".InspectScrollPopUpActivity"
     tools:showIn="@layout/activity_inspect_scroll">
 
     <androidx.constraintlayout.widget.ConstraintLayout
