--- a/app/src/main/res/layout/scrolling_office_pc.xml
+++ b/app/src/main/res/layout/scrolling_office_pc.xml
@@ -77,8 +77,8 @@
             android:layout_marginStart="96dp"
             android:layout_marginLeft="96dp"
             android:layout_marginTop="250dp"
-            android:layout_marginEnd="96dp"
-            android:layout_marginRight="96dp"
+            android:layout_marginEnd="97dp"
+            android:layout_marginRight="97dp"
             android:contentDescription="@string/imgDesc"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -89,7 +89,7 @@
             android:id="@+id/btnInspectPC1"
             android:layout_width="123dp"
             android:layout_height="42dp"
-            android:layout_marginTop="550dp"
+            android:layout_marginTop="584dp"
             android:text="@string/inspect"
             app:backgroundTint="@color/lightBlue"
             app:layout_constraintEnd_toEndOf="parent"
@@ -100,9 +100,21 @@
             android:id="@+id/btnAddtoCartPC1"
             android:layout_width="193dp"
             android:layout_height="42dp"
-            android:layout_marginTop="590dp"
+            android:layout_marginTop="628dp"
             android:text="@string/addToCart"
             app:backgroundTint="@color/lightBlue"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/txtVOfficePc1Price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="528dp"
+            android:text="@string/officePc1Price"
+            android:textColor="@color/black"
+            android:textSize="36sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
