--- a/app/src/main/res/menu/menu_inspect_scroll.xml
+++ b/app/src/main/res/menu/menu_inspect_scroll.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.csi370.mobileprojectcsi370.inspectScrollActivity">
+    tools:context="com.csi370.mobileprojectcsi370.InspectScrollPopUpActivity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
