--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="dark1">#415366</color>
     <color name="lightBlue">#9aa9cf</color>
+    <color name="weirdBlue">#98b9ea</color>
 </resources>
