--- a/app/src/main/res/layout/scrolling_office_pc.xml
+++ b/app/src/main/res/layout/scrolling_office_pc.xml
@@ -102,7 +102,7 @@
             android:layout_height="42dp"
             android:layout_marginTop="628dp"
             android:text="@string/addToCart"
-            app:backgroundTint="@color/lightBlue"
+            app:backgroundTint="@color/weirdBlue"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -116,6 +116,41 @@
             android:textColor="@color/black"
             android:textSize="36sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/btnBackScrollingOffice"
+            android:layout_width="133dp"
+            android:layout_height="35dp"
+            android:layout_marginTop="900dp"
+            android:text="@string/back"
+            app:backgroundTint="@color/lightBlue"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/btnCheckoutScrollingOffice"
+            android:layout_width="157dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="845dp"
+            android:text="@string/checkout"
+            app:backgroundTint="@color/weirdBlue"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.507"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/btnMyCartScrollingOffice"
+            android:layout_width="137dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="800dp"
+            android:text="@string/myCart"
+            app:backgroundTint="@color/lightBlue"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.507"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
