--- a/app/src/main/res/layout/activity_my_cart.xml
+++ b/app/src/main/res/layout/activity_my_cart.xml
@@ -8,29 +8,76 @@
     tools:context=".MyCartActivity">
 
     <Button
+        android:id="@+id/btnCheckoutMyCart"
+        android:layout_width="157dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="620dp"
+        android:layout_marginBottom="3dp"
+        android:text="@string/checkout"
+        app:backgroundTint="@color/weirdBlue"
+        app:layout_constraintBottom_toTopOf="@+id/btnBackMyCart"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.535"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
         android:id="@+id/btnBackMyCart"
         android:layout_width="116dp"
         android:layout_height="41dp"
         android:layout_marginTop="636dp"
-        android:layout_marginBottom="54dp"
+        android:layout_marginBottom="1dp"
         android:text="@string/back"
         app:backgroundTint="@color/lightBlue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.528"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnRemovePurchaseMyCart"
+        android:layout_width="155dp"
+        android:layout_height="62dp"
+        android:layout_marginTop="535dp"
+        android:text="@string/removeProduct"
+        app:backgroundTint="@color/lightBlue"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.886"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/edtEnterProductIDMyCart"
+        android:layout_width="179dp"
+        android:layout_height="54dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="540dp"
+        android:layout_marginEnd="196dp"
+        android:layout_marginRight="196dp"
+        android:layout_marginBottom="90dp"
+        android:autofillHints=""
+        android:ems="10"
+        android:gravity="center"
+        android:hint="@string/enterPurchaseId"
+        android:inputType="number"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/txtVMyCartTitle"
-        android:layout_width="190dp"
-        android:layout_height="60dp"
+        android:layout_width="176dp"
+        android:layout_height="41dp"
         android:layout_marginTop="4dp"
         android:fontFamily="sans-serif-thin"
         android:gravity="center"
         android:text="@string/myCart"
-        android:textSize="36sp"
+        android:textSize="32sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,8 +85,8 @@
 
     <ImageView
         android:id="@+id/imgVCartIcon"
-        android:layout_width="138dp"
-        android:layout_height="97dp"
+        android:layout_width="115dp"
+        android:layout_height="71dp"
         android:layout_marginTop="16dp"
         android:contentDescription="@string/imgDesc"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,20 +95,30 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/cart" />
 
-    <TextView
-        android:id="@+id/txtVCartContents"
-        android:layout_width="321dp"
-        android:layout_height="386dp"
-        android:layout_marginStart="46dp"
-        android:layout_marginLeft="46dp"
-        android:layout_marginTop="29dp"
-        android:layout_marginEnd="44dp"
-        android:layout_marginRight="44dp"
-        android:layout_marginBottom="44dp"
-        android:text="@string/myCart"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/btnBackMyCart"
+    <ScrollView
+        android:id="@+id/scrollView2"
+        android:layout_width="394dp"
+        android:layout_height="350dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginLeft="1dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginRight="1dp"
+        android:layout_marginBottom="160dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.466"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtVMyCartTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/txtVMyCartTitle"
+        app:layout_constraintVertical_bias="0.213">
+
+        <TextView
+            android:id="@+id/txtVCartContents"
+            android:layout_width="match_parent"
+            android:layout_height="386dp"
+            android:text="@string/myCart"
+            android:textSize="16sp" />
+
+    </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
